--- a/.gitignore
+++ b/.gitignore
@@ -120,6 +120,6 @@ bh_unicode_properties.cache
 # Sublime-github package stores a github token in this file
 # https://packagecontrol.io/packages/sublime-github
 GitHub.sublime-settings
-test/data.full.php
+index.php
 .gitignore
 .idea/
