--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -3,7 +3,10 @@ languages:
 exclude_paths: ["test/*"]
 engines:
   phpmd:
-    enabled: false
+    enabled: true
+    config:
+      languages:
+      - php
     exclude_fingerprints:
     #- d06d40061910be96c1c09e5fe3a18e11
     #- e6bc9e9d4d038eb06d7be0c5ef99fde1
