--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,9 +1,11 @@
-engines:
-  phpmd:
-    enabled: true
-    exclude_fingerprints:
-    #- d06d40061910be96c1c09e5fe3a18e11
-    #- e6bc9e9d4d038eb06d7be0c5ef99fde1
 languages:
   PHP: true
 exclude_paths: ["test/*"]
+engines:
+  phpmd:
+    enabled: true
+    config:
+      file_extensions:
+        - php
+        - inc
+      rulesets: "cleancode,codesize,controversial,design,naming"
